colcon_ws/log/build_2022-09-10_03-33-23/dasc_robot/stdout_stderr.log
-- Found ament_cmake: 0.9.9 (/opt/ros/foxy/share/ament_cmake/cmake)
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 2.4.0 (/opt/ros/foxy/share/rclcpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Found rosidl_adapter: 1.2.1 (/opt/ros/foxy/share/rosidl_adapter/cmake)
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 1.0.3 (/opt/ros/foxy/share/rmw_implementation_cmake/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found tf2: 0.13.12 (/opt/ros/foxy/share/tf2/cmake)
-- Found tf2_ros: 0.13.12 (/opt/ros/foxy/share/tf2_ros/cmake)
-- Found px4_msgs: 2.0.1 (/root/colcon_ws/install/px4_msgs/share/px4_msgs/cmake)
-- Found sensor_msgs: 2.0.4 (/opt/ros/foxy/share/sensor_msgs/cmake)
-- Found eigen3_cmake_module: 0.1.1 (/opt/ros/foxy/share/eigen3_cmake_module/cmake)
-- Found px4_ros_com: 0.1.0 (/root/colcon_ws/install/px4_ros_com/share/px4_ros_com/cmake)
-- Configuring done
-- Generating done
-- Build files have been written to: /root/colcon_ws/build/dasc_robot
[ 12%] Built target dascBots
[35m[1mScanning dependencies of target joystick_controller[0m
[ 68%] Built target example_control_multi_rover
[ 68%] Built target example_control
[ 68%] Built target example_control_geometric_velocity
[ 68%] Built target example_control_geometric
[ 75%] Built target example_control_geometric_acceleration
[ 87%] Built target dasc_robot_lib
[ 93%] [32mBuilding CXX object CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o[0m
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp: In function ‘int main(int, char**)’:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:66:8: error: ‘std::this_thead’ has not been declared
   66 |   std::this_thead::sleep_for(2000ms);
      |        ^~~~~~~~~~
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:73:16: error: ‘node’ was not declared in this scope
   73 |   rclcpp::spin(node);
      |                ^~~~
make[2]: *** [CMakeFiles/joystick_controller.dir/build.make:63: CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:308: CMakeFiles/joystick_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
